--- a/templates/index.html
+++ b/templates/index.html
@@ -8,38 +8,39 @@
 {% block body %}
 
     <header>
-        <div>
-            <nav class="navbar navbar-expand-lg navbar-custom">
-                <div class="container-fluid">
-                  <a class="navbar-brand" href="#"><img alt="Main Logo" src="/static/main-logo.png" height="100px"></a>
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <nav class="navbar navbar-expand-lg navbar-light bg-color">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">
+                    <img src="/static/main-logo.png" alt="main logo" height="100px">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                      <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Explore</a>
-                      </li>
-                      <li class="nav-item">
-                        <a class="nav-link" href="#">Host</a>
-                      </li>
-                      <ul class="navbar-nav ms-auto">
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Log In</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link" href="#">Sign up</a>
-                            </li>
-                      </ul>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Explore</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Host</a>
+                        </li>
                     </ul>
-                  </div>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Sign Up</a>
+                        </li>
+                    </ul>
                 </div>
-              </nav>
-        </div>
+            </div>
+        </nav>
     </header>
+
 
     <main>
 
