--- a/static/styles.css
+++ b/static/styles.css
@@ -1,9 +1,72 @@
-.navbar-nav {
-    font-family: 'Honk';
-    font-size: larger;
-    font-weight: 800;
+/* Main body background */
+body {
+    overflow: hidden;
+    height: 100vh;
+    background-image: url('/static/background.jpg');
+    background-position: center;
+    background-size: cover;
 }
 
-.navbar {
-    background-color: rgba(79, 28, 126, 0.731);
+
+#logo {
+    height: 100px;
+    width: 100px;
+    margin-left: 20px;
+    margin-top: 20px;   
+}
+
+.container
+{
+    padding: 1rem;
+    color: white;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Navbar styling */
+.navbar-nav .nav-link {
+    font-size: 2rem;
+    font-family: 'Honk';
+    color: #fff; /* Set font color */
+    font-weight: 1000; /* Set font weight (bold) */
+}
+
+
+#main-content
+{
+    align-items: end;
+    justify-items: left;
+}
+
+#menu-border {
+    background-color: rgb(126, 228, 141);
+    margin-right: 1rem;
+}
+
+
+
+/* Regsiter Page Styling */
+#register-button
+{
+    justify-content: center;
+}
+
+.card {
+    border-radius: 40px;
+    padding: 40px;
+    width: 400px;
+    box-shadow: 0 4px 10px rgb(220, 239, 10);
+}
+.btn-social {
+    margin: 10px 0;
+}
+
+.form-check-input {
+    margin-top: 0.3rem;
+}
+
+#register-page
+{
+    background-image: url('/static/register-background.jpg');
 }
