--- a/templates/index.html
+++ b/templates/index.html
@@ -4,50 +4,34 @@
     Home
 {% endblock %}
 
-
 {% block body %}
 
     <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-color">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="/static/main-logo.png" alt="main logo" height="100px">
-                </a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
-                        <li class="nav-item">
-                            <a class="nav-link" aria-current="page" href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Explore</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Host</a>
-                        </li>
-                    </ul>
-                    <ul class="navbar-nav ms-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Login</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Sign Up</a>
-                        </li>
-                    </ul>
-                </div>
+        <nav class="navbar navbar-expand-lg container">
+            <a class="navbar-brand" href="/"><img id="logo" src="/static/logo.png"></a>
+            <button id="menu-border" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon" id="menu-button"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item"><a class="nav-link" href="#">Events</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="#">Host</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="#">Login</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
+                </ul>
             </div>
         </nav>
     </header>
-
-
-    <main>
-
-    </main>
-
-    <footer>
-
-    </footer>
+    
+    <div>
+        <section class="d-flex justify-content-center align-items-center vh-100">
+            <div style="margin-left: 20px;" id="main-content" class="container">
+                <h1 class="font-effect-neon" style="font-family: 'Sofia', sans-serif; font-size: 60px;">Let's party?</h1>
+                <p class="font-effect-neon" style="font-family: 'Times New Roman', Times, serif;">"Party On! Host, Explore, and Vibe with Epic Nights!"</p>
+                <button class="btn btn-primary me-3">Log in</button>
+                <button class="btn btn-danger"><a class="text-white" style="text-decoration: none;" href="/signup">Sign Up</a></button>
+            </div>  
+        </section>
+    </div>
 
 {% endblock %}
