Signup route setup

--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item"><a class="nav-link" href="#">Events</a></li><hr>
                     <li class="nav-item"><a class="nav-link" href="#">Host</a></li><hr>
-                    <li class="nav-item"><a class="nav-link" href="#">Login</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="/login">Login</a></li><hr>
                     <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
                 </ul>
             </div>
@@ -28,7 +28,7 @@
             <div style="margin-left: 20px;" id="main-content" class="container">
                 <h1 class="font-effect-neon" style="font-family: 'Sofia', sans-serif; font-size: 60px;">Let's party?</h1>
                 <p class="font-effect-neon" style="font-family: 'Times New Roman', Times, serif;">"Party On! Host, Explore, and Vibe with Epic Nights!"</p>
-                <button class="btn btn-primary me-3">Log in</button>
+                <button class="btn btn-primary me-3"><a class="text-white" style="text-decoration: none;" href="/login">Login</a></button>
                 <button class="btn btn-danger"><a class="text-white" style="text-decoration: none;" href="/signup">Sign Up</a></button>
             </div>  
         </section>
