--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,8 @@
 
 {% block body %}
 
+    {% set background_image = '/static/index-background.jpg' %}
+
     <header>
         <nav class="navbar navbar-expand-lg container">
             <a class="navbar-brand" href="/"><img id="logo" src="/static/logo.png"></a>
@@ -14,8 +16,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Events</a></li><hr>
-                    <li class="nav-item"><a class="nav-link" href="#">Host</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="/login">Events</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="/login">Host</a></li><hr>
                     <li class="nav-item"><a class="nav-link" href="/login">Login</a></li><hr>
                     <li class="nav-item"><a class="nav-link" href="/signup">Sign Up</a></li>
                 </ul>
