--- a/templates/home.html
+++ b/templates/home.html
@@ -16,9 +16,8 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item"><a class="nav-link" href="#">Events</a></li><hr>
-                    <li class="nav-item"><a class="nav-link" href="#">Host</a></li><hr>
-                    <li class="nav-item"><a class="nav-link" href="#">Bookings</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="/events">Events</a></li><hr>
+                    <li class="nav-item"><a class="nav-link" href="/host">Host</a></li><hr>
                     <li class="nav-item"><a class="nav-link" href="/logout">Log out</a></li><hr>
                 </ul>
             </div>
