Almost finished, Few touchups left

--- a/templates/signup.html
+++ b/templates/signup.html
@@ -15,7 +15,7 @@
 
             <form action="/signup" method="post" novalidate>
                 <div class="mb-3">
-                    <input type="email" class="form-control" name="email" placeholder="Email" autocomplete="off" required aria-label="Email">
+                    <input type="email" class="form-control" name="email" placeholder="Email" autofocus autocomplete="off" required aria-label="Email">
                 </div>
                 <div class="mb-3">
                     <input type="password" class="form-control" name="password" placeholder="Password" autocomplete="off" required aria-label="Password">
