--- a/templates/signup.html
+++ b/templates/signup.html
@@ -25,6 +25,9 @@
                 </div>
 
                 <button type="submit" class="btn btn-primary w-100">Sign Up</button>
+
+                <hr>
+                <p style="color: white; font-weight: 600;">Already a user? Login now!<a href="/login">Login</a></p>
             </form>
         </div>
     </div>
