--- a/templates/host.html
+++ b/templates/host.html
@@ -59,7 +59,7 @@
                         <div class="mb-3">
                             <label for="label" class="form-label">Label</label>
                             <select class="form-control" id="label" name="label" onchange="updateLabelPreview()">
-                                <option value="" disabled>Label</option>
+                                <option value="" disabled selected>Label</option>
                                 <option value="party">Party</option>
                                 <option value="birthday">Birthday</option>
                                 <option value="anniversary">Anniversary</option>
