--- a/static/styles.css
+++ b/static/styles.css
@@ -4,7 +4,7 @@ body {
     height: 100vh;
     background-position: center;
     background-size: cover;
-    overflow-y: auto;
+    overflow-y: aut;
 }
 
 #logo {
