--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,11 @@
 
 {% block body %}
 
-    {% set background_image = '/static/index-background.jpg' %}
+    {% set background_image = '/static/images/index-background.jpg' %}
 
     <header>
         <nav class="navbar navbar-expand-lg container">
-            <a class="navbar-brand" href="/"><img id="logo" src="/static/logo.png"></a>
+            <a class="navbar-brand" href="/"><img id="logo" src="/static/images/logo.png"></a>
             <button id="menu-border" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" id="menu-button"></span>
             </button>
