--- a/templates/host.html
+++ b/templates/host.html
@@ -6,11 +6,11 @@
 
 {% block body %}
 
-    {% set background_image = '/static/host-background.jpg' %}
+    {% set background_image = '/static/images/host-background.jpg' %}
 
     <header>
         <nav class="navbar navbar-expand-lg container">
-            <a class="navbar-brand" href="/home"><img id="logo" src="/static/logo.png"></a>
+            <a class="navbar-brand" href="/home"><img id="logo" src="/static/images/logo.png"></a>
             <button id="menu-border" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon" id="menu-button"></span>
             </button>
@@ -31,7 +31,7 @@
                     <div class="card" style="width: 100%;">
                         <h5 class="card-title">Event Preview</h5>
                         <div style="width: 100%; height: 200px; overflow: hidden; position: relative;">
-                            <img id="eventImage" src="/static/default-event.jpg" class="card-img-top" alt="Event Image" style="width: 100%; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+                            <img id="eventImage" src="/static/images/default-event.jpg" class="card-img-top" alt="Event Image" style="width: 100%; height: auto; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
                         </div>
                         <div class="card-body">
                             <h2 style="font-weight: 900;" id="eventTitlePreview" class="text-center">Event Title</h2> <!-- Placeholder heading -->  
