--- a/templates/signup.html
+++ b/templates/signup.html
@@ -5,10 +5,10 @@
 {% endblock %}
 
 {% block body %}
-    {% set background_image = '/static/signup-background.jpg' %}
+    {% set background_image = '/static/images/signup-background.jpg' %}
     <div id="register-page" class="d-flex justify-content-center align-items-center vh-100">
         <a href="/">
-            <img id="logo" src="/static/logo.png" alt="Main Logo">
+            <img id="logo" src="/static/images/logo.png" alt="Main Logo">
         </a>
         <div class="card" style="margin: 1rem; background-color: rgb(23, 136, 156);">
             <h2 class="text-center mb-4" style="font-family: 'Honk';">Sign Up</h2>
